--- a/WPFHomeWork1/MainWindow.xaml
+++ b/WPFHomeWork1/MainWindow.xaml
@@ -3,7 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        d:DataContext="{d:DesignInstance local:MainVM, IsDesignTimeCreatable=False}"
+        d:DataContext="{d:DesignInstance local:IMainVM, IsDesignTimeCreatable=False}"
         xmlns:local="clr-namespace:WPFHomeWork1"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
